# fort-c-debug

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  add_one.c
cmake/toolchains/: linux-gnu-x86_64.cmake
src/: CMakeLists.txt  main.f90
src/add_one/: CMakeLists.txt
src/add_three/: CMakeLists.txt  add_three.f90
src/add_two/: CMakeLists.txt  add_two.f90
